broaght in my initial webstatic files

--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -1,129 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>AirBnB clone</title>
-
-		<link rel="shortcut icon" href="images/icon.ico" >
-
-		<link rel="stylesheet" href="styles/4-common.css"/>
-		<link rel="stylesheet" href="styles/3-header.css"/>
-		<link rel="stylesheet" href="styles/3-footer.css"/>
-		<link rel="stylesheet" href="styles/6-filters.css"/>
-		<link rel="stylesheet" href="styles/8-places.css"/>
-	</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>AirBnB Clone</title>
+        <link rel="icon" type="image/x-icon" href="images/airbnb_favicon.png"/>
+        <link rel="stylesheet" href="styles/4-common.css"/>
+        <link rel="stylesheet" href="styles/3-footer.css"/>
+        <link rel="stylesheet" href="styles/3-header.css"/>
+        <link rel="stylesheet" href="styles/6-filters.css"/>
+        <link rel="stylesheet" href="styles/8-places.css"/>
+    </head>
     <body>
-		<header>
-			<div id="header_logo"></div>
-		</header>
-		<div class="container">
-			<section class="filters">
-				<button>Search</button>
-				<div class="locations">
-					<h3>States</h3>
-					<h4>California, Arizona...</h4>
-					<ul class="popover">
-						<li><h2>Arizona</h2>
-							<ul>
-								<li><h4>Page</h4></li>
-								<li><h4>Page2</h4></li>
-							</ul></li>
-						<li><h2>California</h2>
-							<ul>
-								<li><h4>San Francisco</h4></li>
-								<li><h4>Los Altos</h4></li>
-							</ul></li>
-					</ul>
-				</div>
-				<div class="amenities">
-					<h3>Amenities</h3>
-					<h4>Internet, Kitchen...</h4>
-					<ul class="popover">
-						<li><h4>Internet</h4></li>
-						<li><h4>TV</h4></li>
-						<li><h4>Kitchen</h4></li>
-						<li><h4>Iron</h4></li>
-					</ul>
-				</div>
-
-			</section>
-			<section class="places">
-				<h1>Places</h1>
-				<article>
-					<div class="headline">
-						<h2>My home</h2>
-						<div class="price_by_night">$80</div>
-					</div>
-					<div class="information">
-						<div class="max_guest">
-							<div class="guest_icon"></div>
-							<p>2 Guests</p>
-						</div>
-						<div class="number_rooms">
-							<div class="bed_icon"></div>
-							<p>1 Bedroom</p>
-						</div>
-						 <div class="number_bathrooms">
-							<div class="bath_icon"></div>
-							<p>1 Bathroom</p>
-						</div>
-					</div>
-					<div class="user"><b>Owner</b>: John Lennon</div>
-					<div class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    </div>
-				</article>
-				<article>
-					<div class="headline">
-						<h2>Tiny house</h2>
-						<div class="price_by_night">$65</div>
-					</div>
-					<div class="information">
-                        <div class="max_guest">
-                            <div class="guest_icon"></div>
-                            <p>4 Guests</p>
-                        </div>
-                        <div class="number_rooms">
-                            <div class="bed_icon"></div>
-                            <p>2 Bedroom</p>
-                        </div>
-                         <div class="number_bathrooms">
-                            <div class="bath_icon"></div>
-                            <p>1 Bathroom</p>
-                        </div>
-                    </div>
-					<div class="user"><b>Owner</b>: Adrienne</div>
-					<div class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </div>
-				</article>
-				<article>
-					<div class="headline">
-						<h2>A suite</h2>
-						<div class="price_by_night">$180</div>
-					</div>
-					<div class="information">
-                        <div class="max_guest">
-                            <div class="guest_icon"></div>
-                            <p>5 Guests</p>
-                        </div>
-                        <div class="number_rooms">
-                            <div class="bed_icon"></div>
-                            <p>3 Bedroom</p>
-                        </div>
-                         <div class="number_bathrooms">
-                            <div class="bath_icon"></div>
-                            <p>2 Bathroom</p>
-                        </div>
-                    </div>
-					<div class="user"><b>Owner</b>: Betty Holberton</div>
-					<div class="description">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					</div>
-				</article>
-			</section>
-		</div>
-		<footer>
-			<p>Holberton School</p>
-		</footer>
-	</body>
+        <header>
+        	<i class="header-logo"></i>
+        </header>
+        <div class="container">
+        	<section class="filters">
+        		<div class="locations">
+        			<h3>States</h3>
+        			<h4>Kwara, Ilorin</h4>
+        			<ul class="popover">
+        				<li>
+        					<h2>Kwara:</h2>
+        					<ul>
+        						<li>Ilorin</li>
+        						<li>Offa</li>
+        					</ul>
+        				</li>
+        				<li>
+        					<h2>Nasarawa:</h2>
+        					<ul>
+        						<li>Nasarawa Eggon</li>
+        						<li>Lafia</li>
+        					</ul>
+        				</li>
+        			</ul>
+        		</div>
+        		<div class="amenities">
+        			<h3>Amenities</h3>
+        			<h4>Restaurant</h4>
+        			<ul class="popover">
+        				<li>Restaurant</li>
+        				<li>TV</li>
+        				<li>Golf Course</li>
+        				<li>Internet</li>
+        			</ul>
+        		</div>
+        		<button>Search</button>
+        	</section>
+        	<section class="places">
+        		<h1>Places</h1>
+        		<div>
+          		<article>
+          			<div class="place_header">
+          				<h2>Kollin's Place</h2>
+          				<div class="price_by_night">
+          					$80
+          				</div>
+          			</div>
+          			<div class="information">
+          				<div class="max_guest">
+          					<i class="icon guests"></i>
+          					4 Guests
+          				</div>
+          				<div class="number_rooms">
+          					<i class="icon bed"></i>
+          					2 Bedrooms
+          				</div>
+          				<div class="number_bathrooms">
+          					<i class="icon bath"></i>
+          					3 Bathrooms
+          				</div>
+          			</div>
+          			<div class="user">
+          				<strong>Owner</strong>: Charles
+          			</div>
+          			<div class="description">
+          				This is a nicely built 2 bedroom apartment located in a serene environment. It has gorgeous views of the ocean. You're in for a lifetime of tranquility.
+          			</div>
+          		</article>
+          		<article>
+          			<div class="place_header">
+          				<h2>Shoprite Villa</h2>
+          				<div class="price_by_night">
+          					$55
+          				</div>
+          			</div>
+          			<div class="information">
+          				<div class="max_guest">
+          					<i class="icon guests"></i>
+          					4 Guests
+          				</div>
+          				<div class="number_rooms">
+          					<i class="icon bed"></i>
+          					4 Bedrooms
+          				</div>
+          				<div class="number_bathrooms">
+          					<i class="icon bath"></i>
+          					4 Bathrooms
+          				</div>
+          			</div>
+          			<div class="user">
+          				<strong>Owner</strong>: Shoprite Group
+          			</div>
+          			<div class="description">
+          				A collection of 4 luxury rooms exiquisitely curetted for your comfort. You can never go wrong here. With our expert-curetted set of services, the experience here is certainly heavenly.
+          			</div>
+          		</article>
+          		<article>
+          			<div class="place_header">
+          				<h2>Kwara Hotels</h2>
+          				<div class="price_by_night">
+          					$120
+          				</div>
+          			</div>
+          			<div class="information">
+          				<div class="max_guest">
+          					<i class="icon guests"></i>
+          					30 Guests
+          				</div>
+          				<div class="number_rooms">
+          					<i class="icon bed"></i>
+          					15 Bedrooms
+          				</div>
+          				<div class="number_bathrooms">
+          					<i class="icon bath"></i>
+          					15 Bathrooms
+          				</div>
+          			</div>
+          			<div class="user">
+          				<strong>Owner</strong>: Kwara Government
+          			</div>
+          			<div class="description">
+          				The best hotel your money can get while in this city. Though you already know the previous sentence is lie, if you know what we are talking about that is.
+          			</div>
+          		</article>
+        		</div>
+        	</section>
+        </div>
+        <footer>
+            Best School
+        </footer>
+    </body>
 </html>
