--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,21 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>AirBnB clone</title>
-		<style>
-
-			body {margin:0px;padding:0px;}
-			header {background-color:#FF0000;height:70px;width:100%;}
-			footer {position:fixed;bottom:0;background-color:#00FF00;height:60px;width:100%;text-align:center;line-height:30px;}
-
-		</style>
-	</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>AirBnB Clone</title>
+        <style>
+            body {
+                padding: 0;
+                margin: 0;
+            }
+            header {
+                background-color: #FF0000;
+                width: 100%;
+                height: 70px;
+            }
+            footer {
+                position: fixed;
+                bottom: 0;
+                width: 100%;
+                height: 60px;
+                background-color: #00FF00;
+                text-align: center;
+                padding: 20px;
+                box-sizing: border-box;
+            }
+        </style>
+    </head>
     <body>
-		<header>
-		</header>
-
-		<footer>
-			<p>Holberton School</p>
-		</footer>
-	</body>
+        <header>
+        </header>
+        <footer>
+            Best School
+        </footer>
+    </body>
 </html>
