--- a/web_static/103-index.html
+++ b/web_static/103-index.html
@@ -1,195 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>AirBnB clone</title>
-
-		<link rel="shortcut icon" href="images/icon.ico" >
-
-		<link rel="stylesheet" href="styles/4-common.css"/>
-		<link rel="stylesheet" href="styles/3-header.css"/>
-		<link rel="stylesheet" href="styles/3-footer.css"/>
-		<link rel="stylesheet" href="styles/6-filters.css"/>
-		<link rel="stylesheet" href="styles/100-places.css"/>
-	</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>AirBnB Clone</title>
+        <link rel="icon" type="image/x-icon" href="images/airbnb_favicon.png"/>
+        <link rel="stylesheet" href="styles/103-common.css"/>
+        <link rel="stylesheet" href="styles/103-footer.css"/>
+        <link rel="stylesheet" href="styles/103-header.css"/>
+        <link rel="stylesheet" href="styles/103-filters.css"/>
+        <link rel="stylesheet" href="styles/103-places.css"/>
+    </head>
     <body>
-		<header>
-			<div id="header_logo"></div>
-		</header>
-		<div class="container">
-			<section class="filters">
-				<button>Search</button>
-				<div class="locations">
-					<h3>States</h3>
-					<h4>California, Arizona...</h4>
-					<ul class="popover">
-						<li><h2>Arizona</h2>
-							<ul>
-								<li><h4>Page</h4></li>
-								<li><h4>Page2</h4></li>
-							</ul></li>
-						<li><h2>California</h2>
-							<ul>
-								<li><h4>San Francisco</h4></li>
-								<li><h4>Los Altos</h4></li>
-							</ul></li>
-					</ul>
-				</div>
-				<div class="filter_amenities">
-					<h3>Amenities</h3>
-					<h4>Internet, Kitchen...</h4>
-					<ul class="popover">
-						<li><h4>Internet</h4></li>
-						<li><h4>TV</h4></li>
-						<li><h4>Kitchen</h4></li>
-						<li><h4>Iron</h4></li>
-					</ul>
-				</div>
-
-			</section>
-			<section class="places">
-				<h1>Places</h1>
-				<article>
-					<div class="headline">
-						<h2 class="article_title">My home</h2>
-						<div class="price_by_night">$80</div>
-					</div>
-					<div class="information">
-						<div class="max_guest">
-							<div class="guest_icon"></div>
-							<p>2 Guests</p>
-						</div>
-						<div class="number_rooms">
-							<div class="bed_icon"></div>
-							<p>1 Bedroom</p>
-						</div>
-						 <div class="number_bathrooms">
-							<div class="bath_icon"></div>
-							<p>1 Bathroom</p>
-						</div>
-					</div>
-					<div class="user"><b>Owner</b>: John Lennon</div>
-					<div class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    </div>
-					<div class="amenities">
-						<h2 class="article_subtitle">Amenities</h2>
-						<ul>
-							<li><div class="tv_icon"></div>TV</li>
-							<li><div class="wifi_icon"></div>Wifi</li>
-							<li><div class="pet_icon"></div>Pet friendly</li>
-						</ul>
-					</div>
-					<div class="reviews">
-						<h2 class="article_subtitle">Reviews</h2>
-						<ul>
-							<li>
-								<div class="review_item">
-									<h3>From Bob Dylan the 27th January 2017</h3>
-									<p class="review_text">Wow, what can I say?! I'm a real rolling stone, you may have heard, but - by golly - I'd just as well settle down in this humble home, if you'd part with it - course, I'm sure you wouldn't. Real shame too. Oh well...</p>
-								</div>
-							</li>
-							<li>
-								<div class="review_item">
-									<h3>From Justin Majetich the 28th April 1991</h3>
-									<p class="review_text">I was birthed in this here bathtub today!</p>
-								</div>
-							</li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<div class="headline">
-						<h2 class="article_title">Tiny house</h2>
-						<div class="price_by_night">$65</div>
-					</div>
-					<div class="information">
-                        <div class="max_guest">
-                            <div class="guest_icon"></div>
-                            <p>4 Guests</p>
-                        </div>
-                        <div class="number_rooms">
-                            <div class="bed_icon"></div>
-                            <p>2 Bedroom</p>
-                        </div>
-                         <div class="number_bathrooms">
-                            <div class="bath_icon"></div>
-                            <p>1 Bathroom</p>
-                        </div>
-                    </div>
-					<div class="user"><b>Owner</b>: Adrienne</div>
-					<div class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </div>
-					<div class="amenities">
-                        <h2 class="article_subtitle">Amenities</h2>
-                        <ul>
-                            <li><div class="tv_icon"></div>TV</li>
-                            <li><div class="wifi_icon"></div>Wifi</li>
-                        </ul>
-                    </div>
-                    <div class="reviews">
-                        <h2 class="article_subtitle">Reviews</h2>
-                        <ul>
-                            <li>
-								<div class="review_item">
-                                	<h3>From Bilbo Baggins the 6th June 2089</h3>
-                                	<p class="review_text">The place was spotless, and Adrienne was an excellent host, leaving fresh biscuits out for my ravenous arrival.</p>
-								</div>
-                            </li>
-                        </ul>
-                    </div>
-				</article>
-				<article>
-					<div class="headline">
-						<h2 class="article_title">A suite</h2>
-						<div class="price_by_night">$180</div>
-					</div>
-					<div class="information">
-                        <div class="max_guest">
-                            <div class="guest_icon"></div>
-                            <p>5 Guests</p>
-                        </div>
-                        <div class="number_rooms">
-                            <div class="bed_icon"></div>
-                            <p>3 Bedroom</p>
-                        </div>
-                         <div class="number_bathrooms">
-                            <div class="bath_icon"></div>
-                            <p>2 Bathroom</p>
-                        </div>
-                    </div>
-					<div class="user"><b>Owner</b>: Betty Holberton</div>
-					<div class="description">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					</div>
-					<div class="amenities">
-                        <h2 class="article_subtitle">Amenities</h2>
-                        <ul>
-                            <li><div class="pet_icon"></div>Pet friendly</li>
-                        </ul>
-                    </div>
-                    <div class="reviews">
-                        <h2 class="article_subtitle">Reviews</h2>
-                        <ul>
-                            <li>
-								<div class="review_item">
-                                	<h3>From Beyonce Knowles the 16th September 2013</h3>
-                                	<p class="review_text">Betty was a sweetheart. Jay, I and the kids thoroughly enjoyed out stay.</p>
-								</div>
-                            </li>
-                            <li>
-								<div class="review_item">
-                                	<h3>From Julien Barbier the 1th August 2008</h3>
-                                	<p class="review_text">What a beautiful home! I had one of the best night's sleeps of my life and woke up with an idea!</p>
-								</div>
-                            </li>
-                        </ul>
-                    </div>
-				</article>
-			</section>
-		</div>
-		<footer>
-			<p>Holberton School</p>
-		</footer>
-	</body>
+        <header>
+        	<span class="header-logo"></span>
+        </header>
+        <div class="container">
+        	<section class="filters">
+        		<div class="locations">
+        			<h3>States</h3>
+        			<h4>Kwara, Ilorin</h4>
+        			<ul class="popover">
+        				<li>
+        					<h2>Kwara:</h2>
+        					<ul>
+        						<li>Ilorin</li>
+        						<li>Offa</li>
+        					</ul>
+        				</li>
+        				<li>
+        					<h2>Nasarawa:</h2>
+        					<ul>
+        						<li>Nasarawa Eggon</li>
+        						<li>Lafia</li>
+        					</ul>
+        				</li>
+        			</ul>
+        		</div>
+        		<div class="amenities">
+        			<h3>Amenities</h3>
+        			<h4>Restaurant</h4>
+        			<ul class="popover">
+        				<li>Restaurant</li>
+        				<li>TV</li>
+        				<li>Golf Course</li>
+        				<li>Internet</li>
+        			</ul>
+        		</div>
+        		<button><span></span>Search</button>
+        	</section>
+        	<section class="places">
+        		<h1>Places</h1>
+        		<div>
+        		<article>
+        			<div class="place_header">
+        				<h2>Kollin's Place</h2>
+        				<div class="price_by_night">
+        					$80
+        				</div>
+        			</div>
+        			<div class="information">
+        				<div class="max_guest">
+        					<span class="icon guests"></span>
+        					4 Guests
+        				</div>
+        				<div class="number_rooms">
+        					<span class="icon bed"></span>
+        					2 Bedrooms
+        				</div>
+        				<div class="number_bathrooms">
+        					<span class="icon bath"></span>
+        					3 Bathrooms
+        				</div>
+        			</div>
+        			<div class="user">
+        				<strong>Owner</strong>: Charles
+        			</div>
+        			<div class="description">
+        				This is a nicely built 2 bedroom apartment located in a serene environment. It has gorgeous views of the ocean. You're in for a lifetime of tranquility.
+        			</div>
+        			<div class="amenities">
+        				<h2>Amenities</h2>
+        				<ul>
+        					<li><span class="icon tv"></span>TV</li>
+        					<li><span class="icon pet"></span>Pet friendly</li>
+        					<li><span class="icon wifi"></span>Wifi</li>
+        				</ul>
+        			</div>
+        			<div class="reviews">
+        				<h2>2 Reviews</h2>
+        				<ul>
+        					<li>
+        						<h3>From Jeff Bezos the 23rd March 1927</h3>
+        						<p>
+        							Great hospitality and scenery. I'm definitely visiting again.
+        						</p>
+        					</li>
+        					<li>
+        						<h3>From Jeff Bezos the 23rd March 1927</h3>
+        						<p>
+        							Great hospitality and scenery. I'm definitely visiting again.
+        						</p>
+        					</li>
+        				</ul>
+        			</div>
+        		</article>
+        		<article>
+        			<div class="place_header">
+        				<h2>Shoprite Villa</h2>
+        				<div class="price_by_night">
+        					$55
+        				</div>
+        			</div>
+        			<div class="information">
+        				<div class="max_guest">
+        					<span class="icon guests"></span>
+        					4 Guests
+        				</div>
+        				<div class="number_rooms">
+        					<span class="icon bed"></span>
+        					4 Bedrooms
+        				</div>
+        				<div class="number_bathrooms">
+        					<span class="icon bath"></span>
+        					4 Bathrooms
+        				</div>
+        			</div>
+        			<div class="user">
+        				<strong>Owner</strong>: Shoprite Group
+        			</div>
+        			<div class="description">
+        				A collection of 4 luxury rooms exiquisitely curetted for your comfort. You can never go wrong here. With our expert-curetted set of services, the experience here is certainly heavenly.
+        			</div>
+        			<div class="amenities">
+        				<h2>Amenities</h2>
+        				<ul>
+        					<li><span class="icon wifi"></span>Wifi</li>
+        				</ul>
+        			</div>
+        			<div class="reviews">
+        				<h2>1 Review</h2>
+        				<ul>
+        					<li>
+        						<h3>From Kayode Sui the 23rd March 2045</h3>
+        						<p>
+        							Great hospitality and scenery. I'm definitely visiting again. The wifi speed is monstrous. Chip in the fact that it's free, I'm all in for another visit.
+        						</p>
+        					</li>
+        				</ul>
+        			</div>
+        		</article>
+        		<article>
+        			<div class="place_header">
+        				<h2>Kwara Hotels</h2>
+        				<div class="price_by_night">
+        					$120
+        				</div>
+        			</div>
+        			<div class="information">
+        				<div class="max_guest">
+        					<span class="icon guests"></span>
+        					30 Guests
+        				</div>
+        				<div class="number_rooms">
+        					<span class="icon bed"></span>
+        					15 Bedrooms
+        				</div>
+        				<div class="number_bathrooms">
+        					<span class="icon bath"></span>
+        					15 Bathrooms
+        				</div>
+        			</div>
+        			<div class="user">
+        				<strong>Owner</strong>: Kwara Government
+        			</div>
+        			<div class="description">
+        				The best hotel your money can get while in this city. Though you already know the previous sentence is lie, if you know what we are talking about that is.
+        			</div>
+        			<div class="amenities">
+        				<h2>Amenities</h2>
+        				<ul>
+        					<li><span class="icon wifi"></span>Wifi</li>
+        					<li><span class="icon tv"></span>TV</li>
+        				</ul>
+        			</div>
+        			<div class="reviews">
+        				<h2>0 Reviews</h2>
+        				<ul>
+        					<li>
+        						<p>
+        							Be the first to submit a review!
+        						</p>
+        					</li>
+        				</ul>
+        			</div>
+        		</article>
+        		</div>
+        	</section>
+        </div>
+        <footer>
+            Best School
+        </footer>
+    </body>
 </html>
