--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>AirBnB clone</title>
-
-		<link rel="shortcut icon" href="images/icon.ico" >
-
-		<link rel="stylesheet" href="styles/3-common.css"/>
-		<link rel="stylesheet" href="styles/3-header.css"/>
-		<link rel="stylesheet" href="styles/3-footer.css"/>
-	</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>AirBnB Clone</title>
+        <link rel="icon" type="image/x-icon" href="images/airbnb_favicon.png"/>
+        <link rel="stylesheet" href="styles/3-common.css"/>
+        <link rel="stylesheet" href="styles/3-footer.css"/>
+        <link rel="stylesheet" href="styles/3-header.css"/>
+    </head>
     <body>
-		<header>
-			<div id="header_logo"></div>
-		</header>
-
-		<footer>
-			<p>Holberton School</p>
-		</footer>
-	</body>
+        <header>
+        	<i class="header-logo"></i>
+        </header>
+        <footer>
+            Best School
+        </footer>
+    </body>
 </html>
